# serializer version: 1
# name: TestHistoricalExports.test_historical_export_metrics
  '''
  
  SELECT groupArray(date),
         groupArray(successes),
         groupArray(successes_on_retry),
         groupArray(failures)
  FROM
    (SELECT date, sum(CASE
                          WHEN category = 'composeWebhook' THEN 0
                          ELSE successes
                      END) AS successes,
                  sum(successes_on_retry) AS successes_on_retry,
                  sum(failures) AS failures
     FROM
       (SELECT category,
               dateTrunc('hour', timestamp, 'UTC') AS date,
               sum(successes) AS successes,
               sum(successes_on_retry) AS successes_on_retry,
               sum(failures) AS failures
        FROM app_metrics
        WHERE team_id = 2
          AND plugin_config_id = 3
          AND category = 'exportEvents'
          AND job_id = '1234'
          AND timestamp >= '2021-08-25 00:00:00'
          AND timestamp < '2021-08-25 06:00:00'
        GROUP BY dateTrunc('hour', timestamp, 'UTC'),
                 category)
     GROUP BY date
     ORDER BY date WITH FILL
     FROM dateTrunc('hour', toDateTime('2021-08-25 00:00:00'), 'UTC') TO dateTrunc('hour', toDateTime('2021-08-25 06:00:00') + toIntervalHour(1), 'UTC') STEP 3600)
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.1
  '''
  
  SELECT error_type,
         count() AS count,
         max(timestamp) AS last_seen
  FROM app_metrics
  WHERE team_id = 2
    AND plugin_config_id = 3
    AND category = 'exportEvents'
    AND job_id = '1234'
    AND timestamp >= '2021-08-25 00:00:00'
    AND timestamp < '2021-08-25 06:00:00'
    AND error_type <> ''
  GROUP BY error_type
  ORDER BY count DESC
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.2
  '''
  SELECT "markettor_activitylog"."id",
         "markettor_activitylog"."team_id",
         "markettor_activitylog"."organization_id",
         "markettor_activitylog"."user_id",
         "markettor_activitylog"."was_impersonated",
         "markettor_activitylog"."is_system",
         "markettor_activitylog"."activity",
         "markettor_activitylog"."item_id",
         "markettor_activitylog"."scope",
         "markettor_activitylog"."detail",
         "markettor_activitylog"."created_at"
  FROM "markettor_activitylog"
  WHERE ("markettor_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("markettor_activitylog"."detail" #> '{trigger,job_id}') = '"1234"'::jsonb
         AND ("markettor_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "markettor_activitylog"."item_id" = '3'
         AND "markettor_activitylog"."scope" = 'PluginConfig'
         AND "markettor_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.3
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_failed_export
  '''
  SELECT "markettor_activitylog"."id",
         "markettor_activitylog"."team_id",
         "markettor_activitylog"."organization_id",
         "markettor_activitylog"."user_id",
         "markettor_activitylog"."was_impersonated",
         "markettor_activitylog"."is_system",
         "markettor_activitylog"."activity",
         "markettor_activitylog"."item_id",
         "markettor_activitylog"."scope",
         "markettor_activitylog"."detail",
         "markettor_activitylog"."created_at"
  FROM "markettor_activitylog"
  WHERE ("markettor_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("markettor_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "markettor_activitylog"."item_id" = '3'
         AND "markettor_activitylog"."scope" = 'PluginConfig'
         AND "markettor_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_failed_export.1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_finished_export
  '''
  SELECT "markettor_activitylog"."id",
         "markettor_activitylog"."team_id",
         "markettor_activitylog"."organization_id",
         "markettor_activitylog"."user_id",
         "markettor_activitylog"."was_impersonated",
         "markettor_activitylog"."is_system",
         "markettor_activitylog"."activity",
         "markettor_activitylog"."item_id",
         "markettor_activitylog"."scope",
         "markettor_activitylog"."detail",
         "markettor_activitylog"."created_at"
  FROM "markettor_activitylog"
  WHERE ("markettor_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("markettor_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "markettor_activitylog"."item_id" = '3'
         AND "markettor_activitylog"."scope" = 'PluginConfig'
         AND "markettor_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_finished_export.1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export
  '''
  SELECT "markettor_activitylog"."id",
         "markettor_activitylog"."team_id",
         "markettor_activitylog"."organization_id",
         "markettor_activitylog"."user_id",
         "markettor_activitylog"."was_impersonated",
         "markettor_activitylog"."is_system",
         "markettor_activitylog"."activity",
         "markettor_activitylog"."item_id",
         "markettor_activitylog"."scope",
         "markettor_activitylog"."detail",
         "markettor_activitylog"."created_at"
  FROM "markettor_activitylog"
  WHERE ("markettor_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("markettor_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "markettor_activitylog"."item_id" = '3'
         AND "markettor_activitylog"."scope" = 'PluginConfig'
         AND "markettor_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export.1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export.2
  '''
  SELECT "markettor_pluginstorage"."id",
         "markettor_pluginstorage"."plugin_config_id",
         "markettor_pluginstorage"."key",
         "markettor_pluginstorage"."value"
  FROM "markettor_pluginstorage"
  WHERE ("markettor_pluginstorage"."key" = 'EXPORT_COORDINATION'
         AND "markettor_pluginstorage"."plugin_config_id" = 2)
  ORDER BY "markettor_pluginstorage"."id" ASC
  LIMIT 1
  '''
# ---
